Squashed 'backend/' changes from 9b1b71c..3252ac4
3252ac4 refactor: reorganize GlobalExceptionHandler to improve exception handling structure and maintainability, ensuring consistent error responses across various exception types
7dea732 feat: enhance GlobalExceptionHandler to manage 404 and AccessDenied exceptions, updating application properties for Spring MVC error handling

git-subtree-dir: backend
git-subtree-split: 3252ac47b4895cb99831a6c7d3eaef3acee45d25

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,4 +26,8 @@ management.endpoints.web.base-path=/actuator
 abacate.pay.url=https://api.abacatepay.com
 abacate.pay.webhook-secret=${ABACATE_PAY_WEBHOOK_SECRET}
 
+# Spring MVC Configuration - Throw NoHandlerFoundException for unmapped requests
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
 #test10
