--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,11 @@ services:
       context: ./landing
       dockerfile: Dockerfile
     container_name: suavitrine-landing
-    ports:
-      - "3000:3000"
     environment:
       - NODE_ENV=production
+      - NEXT_PUBLIC_BACKEND_URL=api.suavitrine.tech
+    ports:
+      - "3000:3000"
     restart: unless-stopped
 
   nginx:
