--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     container_name: suavitrine-landing
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_BACKEND_URL=api.suavitrine.tech
+      - NEXT_PUBLIC_BACKEND_URL=https://api.suavitrine.tech
     ports:
       - "3000:3000"
     restart: unless-stopped
