--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     environment:
       - NODE_ENV=production
       - NEXT_PUBLIC_BACKEND_URL=https://api.suavitrine.tech
+      - NEXT_PUBLIC_DEBUG_METRICS=true
     ports:
       - "3000:3000"
     restart: unless-stopped
