Add client_max_body_size directive in Nginx configuration for suavitrine.tech

--- a/nginx/conf.d/suavitrine.tech.conf
+++ b/nginx/conf.d/suavitrine.tech.conf
@@ -35,6 +35,8 @@ server {
     ssl_certificate /etc/letsencrypt/live/suavitrine.tech/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suavitrine.tech/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
+    
+    client_max_body_size 50M;
 
     location / {
         proxy_pass http://frontend:80;
