Squashed 'landing/' changes from 3e473d7..845bb76
845bb76 Fix outros category always selected and add icons to footer info
cf0fb90 Refactor StoreContent component to streamline banner rendering logic; consolidate conditional rendering for desktop, tablet, and mobile banners into a single block for improved readability.
1686f4b Enhance backend URL management and debugging in StoreAccessTracker; expose NEXT_PUBLIC_BACKEND_URL to client and improve error handling in api-config.
aacb3f7 Add NotFound page component and 404 image; implement notFound navigation in page.tsx
5be1025 Implement search functionality in store components by adding a SearchBar and integrating it with ProductsGrid; refactor StoreContentClient and StoreSearchWrapper to manage search state.
719ba96 Refactor API calls in multiple components to use centralized backend URL management; implement checks to ensure calls are only made when a valid backend URL is configured.
e9caa28 update dockerfile
56b0942 Update links in Home component to point to the new production URL for the application.
6d44a24 Update .env.example to change backend URL for production environment
994f83f add dockerfile
edf397c Atualizar workflows de deploy para usar git subtree

git-subtree-dir: landing
git-subtree-split: 845bb76808162c81ed94d69f53ce68dad2f38a18

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
 # Backend API Configuration
 # URL do backend em produção (Fly.io)
-NEXT_PUBLIC_BACKEND_URL=https://backend-solitary-snowflake-4899.fly.dev
-
+NEXT_PUBLIC_BACKEND_URL=https://backend
 # Para desenvolvimento local:
 # NEXT_PUBLIC_BACKEND_URL=http://localhost:8080
-
